--- a/create-cycle-app/package.json
+++ b/create-cycle-app/package.json
@@ -33,6 +33,7 @@
     "babel-core": "^6.17.0",
     "babel-register": "^6.16.3",
     "mocha": "^3.1.2",
+    "path-exists": "^3.0.0",
     "rimraf": "^2.5.4"
   }
 }
