--- a/create-cycle-app/package.json
+++ b/create-cycle-app/package.json
@@ -34,6 +34,7 @@
     "babel-register": "^6.16.3",
     "mocha": "^3.1.2",
     "path-exists": "^3.0.0",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "zombie": "^4.2.1"
   }
 }
